Some UI and fixed bug with restarting game

--- a/MemeThing/Views/MainMenu.storyboard
+++ b/MemeThing/Views/MainMenu.storyboard
@@ -536,19 +536,19 @@
                         <color key="backgroundColor" name="background"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="gameCell" id="Q2R-KI-GpJ" customClass="GameTableViewCell" customModule="MemeThing" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="83"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Q2R-KI-GpJ" id="TVI-9T-J3c">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="83"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ktB-mD-9kl" customClass="MemeThingTableCellView" customModule="MemeThing" customModuleProvider="target">
-                                            <rect key="frame" x="10.5" y="8.5" width="393" height="66"/>
+                                            <rect key="frame" x="10.5" y="8.5" width="393" height="68"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lfb-yj-H1P">
-                                                    <rect key="frame" x="6" y="4" width="387" height="58"/>
+                                                    <rect key="frame" x="6" y="0.0" width="387" height="68"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3rG-hb-1Jh">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="387" placeholderIntrinsicHeight="30" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3rG-hb-1Jh">
                                                             <rect key="frame" x="0.0" y="0.0" width="387" height="30"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[main text]" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aha-4Z-yg0" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
@@ -580,8 +580,8 @@
                                                                 </stackView>
                                                             </subviews>
                                                         </stackView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[secondary text]" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqM-Uc-pZi" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="38" width="387" height="20"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="387" placeholderIntrinsicHeight="30" text="[secondary text]" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqM-Uc-pZi" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="38" width="387" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -594,8 +594,8 @@
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             <constraints>
-                                                <constraint firstItem="lfb-yj-H1P" firstAttribute="top" secondItem="ktB-mD-9kl" secondAttribute="top" constant="4" id="2qd-pJ-l2N"/>
-                                                <constraint firstAttribute="bottom" secondItem="lfb-yj-H1P" secondAttribute="bottom" constant="4" id="A0p-x4-ZLv"/>
+                                                <constraint firstItem="lfb-yj-H1P" firstAttribute="top" secondItem="ktB-mD-9kl" secondAttribute="top" id="2qd-pJ-l2N"/>
+                                                <constraint firstAttribute="bottom" secondItem="lfb-yj-H1P" secondAttribute="bottom" id="A0p-x4-ZLv"/>
                                                 <constraint firstItem="lfb-yj-H1P" firstAttribute="leading" secondItem="ktB-mD-9kl" secondAttribute="leading" constant="6" id="D8A-h7-FaO"/>
                                                 <constraint firstAttribute="trailing" secondItem="lfb-yj-H1P" secondAttribute="trailing" id="Hs8-6V-32z"/>
                                             </constraints>
