--- a/MemeThing/Views/AddCaption.storyboard
+++ b/MemeThing/Views/AddCaption.storyboard
@@ -37,16 +37,18 @@
                             </textField>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkK-uE-dFS">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <color key="tintColor" name="purpleAccent"/>
+                                <color key="tintColor" name="navBarText"/>
                                 <color key="barTintColor" name="navBar"/>
                                 <items>
                                     <navigationItem id="npf-vo-2v7">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="LIn-io-HxE">
+                                            <color key="tintColor" name="navBarText"/>
                                             <connections>
                                                 <action selector="mainMenuButtonTapped:" destination="wv3-dL-fID" id="xfm-2U-ri9"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" image="ellipsis" catalog="system" id="oKk-L5-sQx">
+                                            <color key="tintColor" name="navBarText"/>
                                             <connections>
                                                 <action selector="dotsButtonTapped:" destination="wv3-dL-fID" id="6ML-8J-WZK"/>
                                             </connections>
@@ -137,7 +139,7 @@
         <namedColor name="navBar">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="purpleAccent">
+        <namedColor name="navBarText">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
