--- a/MemeThing/Views/Drawing.storyboard
+++ b/MemeThing/Views/Drawing.storyboard
@@ -91,16 +91,18 @@
                             </view>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWg-1Y-3dz">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <color key="tintColor" name="purpleAccent"/>
+                                <color key="tintColor" name="navBarText"/>
                                 <color key="barTintColor" name="navBar"/>
                                 <items>
                                     <navigationItem id="0yv-Xm-4gS">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="iOH-De-Uvz">
+                                            <color key="tintColor" name="navBarText"/>
                                             <connections>
                                                 <action selector="mainMenuButtonTapped:" destination="BYZ-38-t0r" id="zFc-VT-1z6"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" image="ellipsis" catalog="system" id="eQU-Vz-MTh">
+                                            <color key="tintColor" name="navBarText"/>
                                             <connections>
                                                 <action selector="dotsButtonTapped:" destination="BYZ-38-t0r" id="9Hd-0T-2B4"/>
                                             </connections>
@@ -152,7 +154,7 @@
         <namedColor name="navBar">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="purpleAccent">
+        <namedColor name="navBarText">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
