--- a/MemeThing/Views/GameOver.storyboard
+++ b/MemeThing/Views/GameOver.storyboard
@@ -22,11 +22,12 @@
                             </view>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJE-8X-ex2">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <color key="tintColor" name="purpleAccent"/>
+                                <color key="tintColor" name="navBarText"/>
                                 <color key="barTintColor" name="navBar"/>
                                 <items>
                                     <navigationItem id="3P7-am-baH">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="BJF-yZ-Zpy">
+                                            <color key="tintColor" name="purpleAccent"/>
                                             <connections>
                                                 <action selector="mainMenuButtonTapped:" destination="vF3-GY-91v" id="xXG-XE-VOm"/>
                                             </connections>
@@ -134,6 +135,9 @@
         </namedColor>
         <namedColor name="navBar">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="navBarText">
+            <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="purpleAccent">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
