--- a/MemeThing/Views/ViewResults.storyboard
+++ b/MemeThing/Views/ViewResults.storyboard
@@ -23,16 +23,18 @@
                             </view>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f0B-nn-3yJ">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <color key="tintColor" name="purpleAccent"/>
+                                <color key="tintColor" name="navBarText"/>
                                 <color key="barTintColor" name="navBar"/>
                                 <items>
                                     <navigationItem id="XPZ-v1-tvU">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="rWf-Jn-Zc9">
+                                            <color key="tintColor" name="navBarText"/>
                                             <connections>
                                                 <action selector="mainMenuButtonTapped:" destination="OFq-l9-Vna" id="MjV-oh-E6j"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" title="Item" image="ellipsis" catalog="system" id="TRQ-Lf-D8m">
+                                            <color key="tintColor" name="navBarText"/>
                                             <connections>
                                                 <action selector="dotsButtonTapped:" destination="OFq-l9-Vna" id="XmD-lV-oVP"/>
                                             </connections>
@@ -198,7 +200,7 @@
         <namedColor name="navBar">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="purpleAccent">
+        <namedColor name="navBarText">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
