--- a/MemeThing/Views/Waiting.storyboard
+++ b/MemeThing/Views/Waiting.storyboard
@@ -22,16 +22,18 @@
                             </view>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B3v-Lj-bVa">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <color key="tintColor" name="purpleAccent"/>
+                                <color key="tintColor" name="navBarText"/>
                                 <color key="barTintColor" name="navBar"/>
                                 <items>
                                     <navigationItem id="Tzv-IC-egu">
                                         <barButtonItem key="leftBarButtonItem" title="Main Menu" id="zUb-TL-pjC">
+                                            <color key="tintColor" name="navBarText"/>
                                             <connections>
                                                 <action selector="mainMenuButtonTapped:" destination="WoF-12-8qK" id="vGm-wK-DBa"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" image="ellipsis" catalog="system" id="C3T-5N-yno">
+                                            <color key="tintColor" name="navBarText"/>
                                             <connections>
                                                 <action selector="dotsButtonTapped:" destination="WoF-12-8qK" id="tHe-1m-HlQ"/>
                                             </connections>
@@ -104,7 +106,7 @@
         <namedColor name="navBar">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="purpleAccent">
+        <namedColor name="navBarText">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
